[tool.poetry]
name = "repl_python3_Forces-2"
version = "0.1.0"
description = ""
authors = ["PEOL0 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^2.3.1"
pyfiglet = "^0.8.post1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
